# TempData

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SEEDING_IMPROVEMENTS.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.kiro/specs/tempdata-library/: design.md  requirements.md  tasks.md
docs/: README.md  conf.py  index.rst  performance_guide.md  requirements.txt
docs/_static/: custom.css
docs/user-guide/: installation.md  quickstart.md
examples/: batch_generation_examples.py  business_intelligence_pipeline.py  comprehensive_tutorial.py  financial_analysis_pipeline.py  iot_data_pipeline.py
tempdata/: __init__.py  api.py  cli.py
tempdata/cli/: __init__.py  commands.py
tempdata/cli/examples/: README.md  large_dataset_batch.json  related_datasets.json  simple_batch.json  time_series_batch.yaml
tempdata/core/: __init__.py  base_generator.py  batch_generator.py  caching.py  localization.py  seeding.py  streaming.py  time_series.py  validators.py
tempdata/data/: __init__.py  data_loader.py  template_loader.py
tempdata/data/business/: __init__.py  companies.json  products.json
tempdata/data/countries/: __init__.py  city_boundaries.json  comprehensive_city_boundaries.json  comprehensive_country_data.json  country_data.json  states_provinces.json
tempdata/data/countries/postal_codes/: __init__.py  germany.json  pakistan.json  united_kingdom.json  united_states.json
tempdata/data/templates/: __init__.py  email_domains.json  name_formats.json  phone_formats.json  social_media_content.json  user_profile_data.json
tempdata/datasets/: __init__.py
tempdata/datasets/business/: __init__.py  crm.py  customers.py  ecommerce.py  employees.py  inventory.py  marketing.py  retail.py  reviews.py  sales.py  suppliers.py
tempdata/datasets/financial/: __init__.py  banking.py  stocks.py
tempdata/datasets/healthcare/: __init__.py  appointments.py  patients.py
tempdata/datasets/iot_sensors/: __init__.py  energy.py  weather.py
tempdata/datasets/social/: __init__.py  social_media.py  user_profiles.py
tempdata/datasets/technology/: __init__.py  system_logs.py  web_analytics.py
tempdata/exporters/: __init__.py  base_exporter.py  csv_exporter.py  excel_exporter.py  export_manager.py  geojson_exporter.py  json_exporter.py  parquet_exporter.py
tempdata/geo/: __init__.py  address.py  coordinates.py  places.py  routes.py
tests/: __init__.py  conftest.py  test_api.py  test_appointment_generator.py  test_banking_generator.py  test_base_generator.py  test_basic.py  test_batch_generator.py  test_caching.py  test_cli_commands.py  test_comprehensive_core.py  test_comprehensive_generators.py  test_crm_generator.py  test_csv_exporter.py  test_customer_generator.py  test_data_loading.py  test_ecommerce_generator.py  test_employees_generator.py  test_end_to_end.py  test_energy_generator.py  test_excel_exporter.py  test_export_manager.py  test_geographical_data.py  test_geojson_exporter.py  test_inventory_generator.py  test_json_exporter.py  test_localization.py  test_marketing_generator.py  test_parquet_exporter.py  test_patient_generator.py  test_pattern_validation.py  test_performance_benchmarks.py  test_retail_generator.py  test_reviews_generator.py  test_route_poi.py  test_sales_generator.py  test_seeding.py  test_social_media_generator.py  test_stock_generator.py  test_streaming_generator.py  (+8 more)
