[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tempdata"
version = "0.1.0"
authors = [
    {name = "TempData Team", email = "saqibshaikhdz@gmail.com"},
]
description = "Realistic fake data generation library with worldwide geographical capabilities"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
]
keywords = ["fake-data", "test-data", "data-generation", "geographical", "time-series"]

dependencies = [
    # Core dependencies
    "pandas>=1.5.0",
    "numpy>=1.21.0", 
    "faker>=19.0.0",
    
    # Geographical and time handling
    "pytz>=2023.3",
    
    # Export formats
    "openpyxl>=3.1.0",  # Excel export
    
    # CLI interface
    "click>=8.1.0",
    
    # Performance and utilities
    "tqdm>=4.65.0",     # Progress bars
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.82.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]
docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]
performance = [
    "numba>=0.57.0",    # JIT compilation for performance
    "dask>=2023.8.0",   # Parallel processing
]

[project.urls]
Homepage = "https://github.com/dot-css/tempdata"
Documentation = "https://tempdata.readthedocs.io"
Repository = "https://github.com/dot-css/tempdata.git"
"Bug Tracker" = "https://github.com/dot-css/tempdata/issues"

[project.scripts]
tempdata = "tempdata.cli:cli"

[tool.setuptools]
packages = ["tempdata"]
include-package-data = true

[tool.setuptools.package-data]
tempdata = [
    "data/countries/*.json",
    "data/business/*.json",
    "data/templates/*.json", 
    "data/templates/*.txt",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance benchmarks",
]

[tool.coverage.run]
source = ["tempdata"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]