[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tempdata"
version = "0.1.0"
authors = [
    {name = "TempData Team", email = "saqibshaikhdz@gmail.com"},
]
description = "Realistic fake data generation library with worldwide geographical capabilities"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
]
keywords = ["fake-data", "test-data", "data-generation", "geographical", "time-series"]

dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0", 
    "faker>=19.0.0",
    "pytz>=2023.3",
    "openpyxl>=3.1.0",
    "click>=8.1.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/dot-css/tempdata"
Documentation = "https://tempdata.readthedocs.io"
Repository = "https://github.com/dot-css/tempdata.git"
"Bug Tracker" = "https://github.com/dot-css/tempdata/issues"

[project.scripts]
tempdata = "tempdata.cli:cli"

[tool.setuptools]
packages = ["tempdata"]
include-package-data = true

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]